<?xml version="1.0" encoding="utf-8"?>
<!--
    Tryton Android
    Copyright (C) 2012 SARL SCOP Scil (contact@scil.coop)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<!-- Labels are picked to match the python desktop client, labels marked with a NEW
are not used in the desktop client and should be translated directly.
Those with a AND are present but differs because of size or other reason. In this case
the original label is set after the tag -->
<resources>
  <string name="app_name">Tryton</string>

  <!-- General strings -->
  <string name="general_yes">Yes</string>
  <string name="general_no">No</string>
  <string name="general_ok">OK</string>
  <string name="general_cancel">Cancel</string>
  <string name="general_config">Configure</string> <!-- NEW -->
  <string name="general_preferences">Preferences...</string>
  <string name="general_logout">Disconnect</string>
  <string name="general_about">About...</string>
  <string name="general_true">Yes</string> <!-- NEW -->
  <string name="general_false">No</string> <!-- NEW -->
  <string name="general_new_record">Create a new record</string>
  <string name="general_graph">Graph view</string> <!-- NEW -->
  <string name="general_reload">Reload</string>
  <string name="general_clear">Clear</string>

  <!-- Unsupported temp strings -->
  <string name="general_not_supported">Not available on mobile device</string> <!-- NEW -->
  <string name="general_no_tree_view">No tree view available</string> <!-- NEW -->
  
  <!-- Login labels -->
  <string name="login_user">User name</string>
  <string name="login_password">Password</string>
  <string name="login_send">Connect</string>
  <string name="login_server_unavailable">Could not connect to the server</string>
  <string name="login_bad_login">Connection error!\nBad login or password!</string>
  <string name="login_logging_in">Connecting</string> <!-- NEW -->
  <string name="login_popup_title">Tryton</string>

  <!-- Menu labels -->
  <string name="menu_loading">Loading menu</string> <!-- NEW -->
  <string name="menu_cache">Preload data</string> <!-- NEW -->
  <string name="menu_caching">Caching %s...</string> <!-- NEW -->

  <!-- View labels -->
  <string name="view_loading">Loading views</string> <!-- NEW -->
  <string name="data_loading">Loading data</string> <!-- NEW -->
  <string name="tree_switch_mode_summary">Summary mode</string> <!-- NEW -->
  <string name="tree_switch_mode_extended">Extended mode</string> <!-- NEW -->
  <string name="tree_pagination">%1$d - %2$d of %3$d</string> <!-- NEW -->
  <string name="form_save">Save</string>
  <string name="form_delete">Delete...</string>
  <string name="form_delete_title">Confirmation</string>
  <string name="form_delete_message">Are you sure to remove this record?</string>
  <string name="form_dirty_title">Confirmation</string>
  <string name="form_dirty_message">This record has been modified. Do you want to save it?</string>
  <string name="tomany_add">Add</string>
  <string name="tomany_remove">Remove</string>
  <string name="tomany_add_new">Create a new record</string>
  <string name="tomany_delete">Delete</string> <!-- AND: Delete selected record -->
  <string name="data_send">Sending data</string> <!-- NEW -->
  <string name="data_send_done">Record saved!</string>
  <string name="data_send_queued">Operation queued</string> <!-- NEW -->
  
  <!-- Configuration labels -->
  <string name="config_host_title">Host</string> <!-- AND: Host: -->
  <string name="config_host_desc">Your Tryton server host</string> <!-- NEW -->
  <string name="config_port_title">Port</string> <!-- AND Port: -->
  <string name="config_port_desc">Your Tryton server port</string> <!-- NEW -->
  <string name="config_ssl_title">Use SSL</string> <!-- NEW -->
  <string name="config_ssl_desc">Check if your server uses SSL</string> <!-- NEW -->
  <string name="config_database_title">Database</string> <!-- AND: Database: -->
  <string name="config_database_desc">The database on your host to connect to</string> <!-- NEW -->
  <string name="config_user_preferences">User preferences</string> <!-- NEW -->
  <string name="config_autologout_title">Auto logout</string> <!-- NEW -->
  <string name="config_autologout_desc">Automatically logout when quitting with back button</string> <!-- NEW -->
  <string name="config_offlineuse_title">Offline use</string> <!-- NEW -->
  <string name="config_offlineuse_desc">Save modifications and send them manually when the server is unavailable</string> <!-- NEW -->

  <!-- Delayed requester labels -->
  <string name="requester_pending_one">1 request pending</string>
  <string name="requester_pending">%d requests pending</string>
  <string name="requester_message">Click to send</string>

  <!-- About labels -->
  <string name="about_author">Realized by Scil (http://scil.coop), financed by Bio Eco Forests (http://bioecoforests.com)</string> <!-- NEW -->
  <string name="about_licence">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. See http://www.gnu.org/licenses/.</string> <!-- NEW -->
  <string name="about_source">Get the source code of the application at http://trac.scil.coop/tryton_android</string> <!-- NEW -->
  <string name="about_svg_android">This application uses svg-android, licenced under the Apache License version 2.0. See http://www.apache.org/licenses/LICENSE-2.0.</string> <!-- NEW -->
  <string name="about_jsonrpc">This application uses android-json-rpc, licenced under the MIT Licence.</string> <!-- NEW -->
</resources>