<?xml version="1.0" encoding="utf-8"?>
<!--
    Tryton Android
    Copyright (C) 2012 SARL SCOP Scil (contact@scil.coop)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<!--
    This is the configuration (preferences) screen layout definition.
    It is loaded from the org.tryton.client.Configure activity.
    Make sure the keys are the same in both files.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <EditTextPreference
      android:key="host"
      android:title="@string/config_host_title"
      android:summary="@string/config_host_desc" />
  <EditTextPreference
      android:key="database"
      android:title="@string/config_database_title"
      android:summary="@string/config_database_desc" />
  <CheckBoxPreference
      android:key="autologout"
      android:title="@string/config_autologout_title"
      android:summary="@string/config_autologout_desc" />
      />
</PreferenceScreen>
