<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#000">
  <!-- The background moon -->
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="-50dip"
      android:src="@drawable/tryton_moon" />
  <!-- Tryton logo -->
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/content_margin"
      android:src="@drawable/tryton_header" />
  <!-- Login block -->
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:orientation="vertical">
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/login_user" />
    <EditText android:id="@+id/login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minEms="@integer/login_text_size_em" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password" />
    <EditText android:id="@+id/password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:minEms="@integer/login_text_size_em"
              android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/login_send"
        android:drawableLeft="@drawable/connect"
        android:onClick="login" />
  </LinearLayout>
  <!-- Server version note -->
  <TextView android:id="@+id/server_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/content_margin"
            android:layout_marginBottom="@dimen/content_margin" />

</RelativeLayout>

